# Plant_health_recognition

./: .gitignore  README.md  data_extractor.py  dataset_loader.py  plant_disease_best.pth  pyproject.toml
docs/: conf_matrix_save.txt
scripts/: dataset_fix.sh  setup_llm.py  test_pipeline.py  test_wikipedia_all.py
src/: app.py  cnn_trainer.py  cnn_trainer_pretrained.py  data_extractor.py  dataset_loader.py  diseases.py  image_classifier.py  llm_assistant.py  main.py  models_comparator.py  wiki_fetcher.py
