[project]
name = "plant-health-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[project.scripts]
setup-llm = "scripts.setup_llm:main"
app = "src.app:main"

